--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Home Page</title>
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -550,11 +550,7 @@
             <img src="image/footer-bottom-img.png" alt="">
         </div>
   
-        
-   <!---- 
-   <script src="sgnin.js"></script>
-      --->
-
+   
   <script>
     
 
