--- a/inputdetails/index.html
+++ b/inputdetails/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Signup</title>
+  <title>login Page</title>
   <link rel="stylesheet" href="../style/signup.css" />
 </head>
 <body>
@@ -55,7 +55,7 @@
       alert("Account created successfully");
 
       // Redirect to index.html
-      window.location.href = "../index.html";
+      window.location.href = "../home.html";
 
       
       userInput.value = "";
