made few changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button onclick="inputGeneral()" class="create-account">Create account</button>
 
       <div class="already">
-        <span>Already have an account? <a href="../inputdetails/login.html">Log in</a></span>
+        <span>Already have an account? <a href="login.html">Log in</a></span>
       </div>
     </div>
   </div>
@@ -55,7 +55,7 @@
       alert("Account created successfully");
 
       // Redirect to index.html
-      window.location.href = "../inputdetails/home.html";
+      window.location.href = "home.html";
 
       
       userInput.value = "";
