--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <input class="password-input" type="text" placeholder="Password" />
     <button onclick="loginPage()" class="login-button">Login</button>
 
-    <p class="signup-link">Don't have an account? <a href="../index.html">Sign up</a></p>
+    <p class="signup-link">Don't have an account? <a href="index.html">Sign up</a></p>
   </div>
 
   <script>
