--- a/home.html
+++ b/home.html
@@ -150,17 +150,11 @@
     <div class="service-img">
      <div class="jpeg">
         <img class="ourService" src="image/service-banner.jpg" alt="our service">
-        <button class="btn-download">
-        <span>D</span>
-        <span>O</span>
-        <span>W</span>
-        <span>N</span>
-        <span>L</span>
-        <span>O</span>
-        <span>A</span>
-        <span>D</span>
+       
+   <!----- <button class="btn-download">
+      <span>DOWNLOAD</span>
         <img src="image/download (1).png" alt="" class="download-icon">
-        </button>
+        </button>  --->
      </div>
     </div>
 
